# tdev

./: Makefile  meson.build  meson_options.txt
plugins/: print.c
src/: main.c  netlink.c  plugin.c  tdev.c  tdev.h
